src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;


h1 {
    @apply font-semibold text-3xl;
  }
  
h2 {
    @apply font-semibold text-2xl;
  }
  
  @layer components {
    
    a:hover {
      @apply underline;
    }

    #web-title{
      padding-bottom: 10px;
      padding-right: 10px;
    }
    #web-title a:hover {
      @apply no-underline;
      /* background-size: 500% 100%;
      background-image: linear-gradient(90deg, #16215c, #343e76, #649b71, #9b8a64, #9b6864, #9b648f);
      animation: gradientAnimation 2s linear infinite;
      color: transparent;
      background-clip: text; */
    }
  } 

  @keyframes gradientAnimation {
    0% {
      background-position: 0;
    }
    to {
      background-position: 100%;
    }
  }


p {
    @apply text-base;
  }

  :root {
    --responsive-font-size: clamp(1.25rem, 1vw); 
  }
  
  .text-responsive-xl {
    font-size: var(--responsive-font-size);
  }


  .truncate-text {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: block;
    transition: white-space 0.3s ease;
  }

  .truncate-text:hover {
    white-space: normal;
  }

  .star-bulleted-list {
    list-style-type: 'ᯓ★ ';
    padding-left: 24px;
  }

  .bulleted-list {
    list-style-type: disc;
    padding-left: 24px;
  }

  img {
    object-fit: contain;
  }

